add timing information and JVM tuning suggestions