@@ -7,31 +7,44 @@ import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
 import javax.persistence.Persistence;
 import javax.transaction.TransactionManager;
+
 import java.util.Random;
+import java.util.concurrent.TimeUnit;
 
 /**
  * @author Emmanuel Bernard <emmanuel@hibernate.org>
  */
 public class Main {
-	public static void main(String[] args) {
+
+	/**
+	 * To use jClarity's Censum:
+	 * -Xmx2G -Xms2G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -Xbatch -server -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+AlwaysPreTouch -Xloggc:gc-full.log -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime
+	 *
+	 * To use HPJmeter:
+	 * -Xmx2G -Xms2G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -Xbatch -server -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+AlwaysPreTouch -Xloggc:gc-simple.log
+	 *
+	 * To use Flight Recorder:
+	 * -Xmx2G -Xms2G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -Xbatch -server -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+AlwaysPreTouch -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:FlightRecorderOptions=defaultrecording=true,disk=true,dumponexit=true,dumponexitpath=/tmp
+	 */
+
+	private static final int LOOPS = 10000000;
+	private static final int OUTPUT_EACH = 200;
+
+	public static void main(String[] args) throws Exception {
 		System.out.println( "Test me" );
 
-		TransactionManager tm = null;
-		try {
-			tm = getTransactionManager();
-		} catch ( Exception e ) {
-			e.printStackTrace();
-		}
+		TransactionManager tm = getTransactionManager();
 
 		//build the EntityManagerFactory as you would build in in Hibernate Core
 		EntityManagerFactory emf = Persistence.createEntityManagerFactory( "ogm-jpa-tutorial" );
-		Random random = new Random(  );
+		Random random = new Random( 17 );
 		long counter = 0;
 
+		long startime = System.nanoTime();
 		//Persist entities the way you are used to in plain JPA
 		try {
 
-			while (counter < 1000) {
+			while (counter < LOOPS) {
 				tm.begin();
 				EntityManager em = emf.createEntityManager();
 				Breed collie = new Breed();
@@ -61,6 +74,14 @@ public class Main {
 				em.flush();
 				em.close();
 				tm.commit();
+
+				if (counter % OUTPUT_EACH == 0) {
+					long afterTime = System.nanoTime();
+					long millis = TimeUnit.MILLISECONDS.convert( afterTime - startime, TimeUnit.NANOSECONDS );
+					long txPerSecond = (OUTPUT_EACH *1000 / millis);
+					System.out.println( "I'm alive sill, and counter is at " + counter + ". Milliseconds from last check:" + millis + "\t TX/second: " + txPerSecond);
+					startime = afterTime;
+				}
 
 			}
 		} catch ( Exception e ) {
